just code clarify

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,7 +4,7 @@
 # Coded by Yasuhiro ISHII,4/15/2013
 #
 
-CROSS		 = 
+CROSS		 = arm-none-linux-gnueabi-
 CC		 = $(CROSS)gcc
 CFLAGS		 = -O0 -I. -g
 OBJS		 = oled.o fb.o gpiolib.o
@@ -32,3 +32,7 @@ depend: $(OBJS:.o=.c)
 	-@ makedepend -- $(CFLAGS) -- -Y $^ -f Makefile 2> /dev/null
 
 # DO NOT DELETE
+
+oled.o: fb.h gpiolib.h
+fb.o: fb.h
+gpiolib.o: gpiolib.h
